--- a/site.css
+++ b/site.css
@@ -8,9 +8,10 @@
 }
 body{
 	background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url("b.jpg");
-	height:80px;
-	background-size: cover;
-	background-position: center;
+	height:60px;
+	background-repeat: no-repeat;
+	background-size:600px 900px;
+	background-position: left;
 }
 ul{
 	float: right;
