--- a/site.css
+++ b/site.css
@@ -8,7 +8,7 @@
 }
 body{
 	background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url("b.jpg");
-	height:60px;
+	height:100%;
 	background-repeat: no-repeat;
 	background-size:100% 100%;
 	background-position: left;
