--- a/contact.css
+++ b/contact.css
@@ -8,10 +8,9 @@
 }
 body{
 	background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url("b.jpg");
-	height:100%;
 	background-repeat: no-repeat;
 	background-size:100% 100%;
-	background-position: left;
+	background-position: center-left;
 }
 ul{
 	float: right;
