--- a/site.css
+++ b/site.css
@@ -25,7 +25,7 @@ ul li a {
 	text-decoration: none;
 	color: #fff;
 	font-weight:normal;
-	padding:5px 20px;
+	padding:30px 90px;
 	border: 1px solid transparent;
 	transition: 0.8s ease
 }
@@ -49,31 +49,31 @@ img {
 {
 	position: absolute;
 	top: 40%;
-	left: 25%;
+	left: 35%;
 	transform: translate(-50%,-50%)
 }
 .title h1
 {
 	color:#fff;
 	font-family:Algerian;
-	font-size:30px
+	font-size:400%
 }
 
 .title h2
 {
 	color:#fff;
 	font-family:Comic Sans MS;
-	font-size:20px
+	font-size:200%
 }
 .title h3
 {
 	color:#fff;
 	font-family:Comic Sans MS;
-	font-size:20px
+	font-size:200%
 }
 .title h4
 {
 	color:#fff;
 	font-family:Comic Sans MS;
-	font-size:15px
+	font-size:100%
 }
