--- a/site.css
+++ b/site.css
@@ -10,7 +10,7 @@ body{
 	background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url("b.jpeg");
 	background-repeat: no-repeat;
 	background-size:100% 100%;
-	background-position: center-left;
+	background-position: center;
 }
 ul{
 	float: right;
