--- a/contact.css
+++ b/contact.css
@@ -48,7 +48,7 @@ img {
 .title
 {
 	position: absolute;
-	top: 40%;
+	top: 30%;
 	left: 35%;
 	transform: translate(-50%,-50%)
 }
@@ -88,6 +88,15 @@ img {
 }
 .centerdiv h1
 {
+	color:#fff;
+	font-family:Comic Sans MS;
+	font-size:100%
+}
+h4{
+	position: absolute;
+	top: 60%;
+	left: 35%;
+	transform: translate(-50%,-50%);
 	color:#fff;
 	font-family:Comic Sans MS;
 	font-size:100%
